@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1007 2009-03-10 06:17:37 castaglia Exp $
+$Id: NEWS,v 1.1008 2009-03-10 23:26:14 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -73,6 +73,8 @@ CVS
   protections on data tranfers, then reuse of the SSL session from the
   control connection is now enforced.  Use "TLSOptions NoSessionReuseRequired"
   to relax this requirement.
+- Bug 3215 - mod_wrap2_sql should support comma-delimited lists of clients.
+  This is the same as Bug#3048, only it affects the mod_wrap2_sql module.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
